--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -607,7 +607,7 @@ function change(str){
 </span><span class="cactus_green" title="仙人掌绿">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items green_force_of_water" title="绿色水之力">
-</span></span></span></td><td>右键放置一格水。</td></tr>
+</span></span></span></td><td>右键放置一格水。<br/><br/><em>Surrare Lilliana!</em></td></tr>
 
 <tr><th id="cyan_force_of_mountain"><strong>青色山之力 (Cyan Force of Mountain)</strong></th><td>青色染料+铁锭+<a href="#limb_of_ridge" onclick="change('entities');">山脉之肢</a></td><td><span class="mcui"><span>
 <span class="mcui-row"><span class="cyan_dye" title="青色染料">
@@ -635,7 +635,7 @@ function change(str){
 </span><span class="orange_dye" title="橙色染料">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items orange_force_of_dirt" title="橙色土之力">
-</span></span></span></td><td>右键破坏土质方块。</td></tr>
+</span></span></span></td><td>右键破坏土质方块。<br/><br/><em>Defla Forces!</em></td></tr>
 
 <tr><th id="yellow_force_of_Earth"><strong>黄色地之力 (Yellow Force of Earth)</strong></th><td>蒲公英黄+金锭+<a href="#certification_of_earth" onclick="change('entities');">大地之证</a></td><td><span class="mcui"><span>
 <span class="mcui-row"><span class="dandelion_yellow" title="蒲公英黄">
@@ -663,7 +663,7 @@ function change(str){
 </span><span class="rose_red" title="玫瑰红">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items red_force_of_fire" title="红色火之力">
-</span></span></span></td><td>右键烧炼方块成物品。</td></tr>
+</span></span></span></td><td>右键烧炼方块成物品。<br/><br/><em>Fial Forces!</em></td></tr>
 
 <tr><th id="purple_force_of_life"><strong>紫色命之力 (Purple Force of Life)</strong></th><td>紫色染料+钻石+<a href="#spirit_of_life" onclick="change('entities');">生命之灵</a></td><td><span class="mcui"><span>
 <span class="mcui-row"><span class="purple_dye" title="紫色染料">
@@ -705,7 +705,7 @@ function change(str){
 </span><span class="ink_sac" title="墨囊">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items black_force_of_moon" title="黑色月之力">
-</span></span></span></td><td>右键消耗玩家40点经验并在前方铺设泥土道路。<br/><br/><em>Moon power, make up!</em></td></tr>
+</span></span></span></td><td>右键消耗玩家40点经验并在前方铺设泥土道路。</td></tr>
 
 </tbody></table>
 <p><img style="width:48%" src="items/screenshots/2_red.png" /> <img style="width:48%" src="items/screenshots/2_blue.png" /></p>
@@ -1133,7 +1133,7 @@ function change(str){
 </span><span class="empty">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items origin_of_the_world" title="世界之源">
-</span></span></span></td><td>右键消耗20点经验返回世界原点。</td></tr>
+</span></span></span></td><td>右键消耗20点经验返回世界原点。<br/><br/><em>Slonhon Ral!</em></td></tr>
 
 <tr><th><strong id="enchanted_iron">附魔铁锭 (Enchanted Iron)</strong></th><td>附魔之瓶+<a href="#blue_force_of_sky" onclick="change('elements');">蓝色天之力</a>+铁锭</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="experience_bottle" title="附魔之瓶">
@@ -1850,7 +1850,7 @@ function change(str){
 <p>多个生命恢复/抗性/幸运效果可提升效果等级。</p>
 <p>生命恢复(2.5秒)每恢复1点生命值、饱和每恢复1点饥饿值、海洋之力/抗性II每3秒、其余效果每6秒，消耗1点经验值，并有1/60几率消耗烈焰粉。连锁无消耗。</p>
 <p>使用<a href="#temperancer">节制器</a>可开启/关闭所有效果。</p>
-<p>连锁钻石斧可一次性破坏相连的树和瓜，连锁钻石镐可一次性破坏相连的矿石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土和沙子。该效果不受精准采集和时运影响。</p>
+<p>连锁钻石斧可一次性破坏相连的树和瓜，连锁钻石镐可一次性破坏相连的矿石，连锁钻石锹可一次性8米内破坏相连的沙砾、粘土、沙子和灵魂沙。该效果不受精准采集和时运影响。</p>
 <p>效果可重新附加，之前的效果将会被覆盖。与属性附加、附魔独立。</p>
 
 <h4>附魔书制作</h4>
@@ -2086,7 +2086,7 @@ function change(str){
 </span><span class="firework_rocket" title="烟花火箭">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
 <span class="colorful_items broom" title="扫帚">
-</span></span></span></td><td>在副手时提供漂浮效果</td></tr>
+</span></span></span></td><td>在副手时提供漂浮效果<br/><br/><em>Tia Fraere!</em></td></tr>
 
 </tbody></table>
 
